# tail

./: README.md  dune-project  tail.opam
src/: ast.ml  dune  parser.mly  tailc.ml  taillexer.ml  tailparser.mly
src/codegen/: codegen.ml  dune
src/parser/: dune  maintain_syntax_error_messages.ml  syntax.mly  syntax_errors.messages  tailparser.ml
src/semantic/: dune  scopechecker.ml  symbols_table.ml  tailsemantic.ml  typechecker.ml
tests/: dune  run_tests.ml
tests/lexer/: dune  lexer_tests.ml
tests/parser/test_files/: fibonacci.tail  if.tail  literals.tail  test.tail  test2.tail  variants.tail
tests/semantic/: dune  semantic_tests.ml
