(env
  (dev
    (flags (:standard -warn-error -A))))

(executable
  (name tailc)
  (public_name tailc)
  (package tail)
  (modules tailc ast syntax tailparser taillexer syntax_error_messages)
  (libraries base cmdliner sedlex menhirLib)
  (preprocess (pps sedlex.ppx)))

(include_subdirs unqualified)
