(env
  (dev
    (flags (:standard -warn-error -A))))


; Lexer library
(library
  (name taillexer)
  (wrapped false)
  (modules taillexer)
  (libraries sedlex tailparser)
  (preprocess (pps sedlex.ppx)))


; Ast library
(library
  (name ast)
  (wrapped false)
  (modules ast))


(executable
  (name tailc)
  (public_name tailc)
  (package tail)
  (modules tailc)
  (libraries base cmdliner taillexer tailparser ast))
