(env
  (dev
    (flags (:standard -warn-error -A))
    (ocamlopt_flags -O3)))


; Ast library
(library
  (name ast)
  (wrapped false)
  (modules ast))


(executable
  (name tailc)
  (public_name tailc)
  (package tail)
  (modules tailc)
  (libraries base cmdliner result tailparser tailsemantic ast))
